# vhal-mcp-server

./: .gitignore  LICENSE  PROPERTY_VALIDATION_FEATURE.md  README.md  analyzers.py  claude_desktop_config.json  code_generator.py  database.py  main.py  models.py  performance_test.py  pr_generator.py  pyproject.toml  relationships.py  requirements.txt  run_tests.py  scrapers.py  server.py  summarizers.py  test_enhanced_tool.py  test_property_validation.py  test_vhal.py  warp-mcp-config.json
config/: claude_desktop_config_uv.json
docs/: README.md
src/vhal_mcp_server/: __init__.py  models.py  server.py
src/vhal_mcp_server/core/: __init__.py  analyzers.py  database.py  property_validator.py  scrapers.py  source_validator.py
src/vhal_mcp_server/generators/: __init__.py  code_generator.py  pr_generator.py
src/vhal_mcp_server/utils/: relationships.py  summarizers.py
tests/: __init__.py  performance_test.py  test_vhal.py
