[project]
name = "vhal-mcp-server"
version = "0.1.0"
description = "MCP server for Android Vehicle Hardware Abstraction Layer (vHAL) documentation and source code lookup"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Felix Boudnik"}
]
keywords = ["mcp", "android", "vhal", "automotive", "vehicle"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.10.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.urls]
"Homepage" = "https://github.com/felixboudnik/vhal-mcp-server"
"Repository" = "https://github.com/felixboudnik/vhal-mcp-server.git"
"Issues" = "https://github.com/felixboudnik/vhal-mcp-server/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
vhal-mcp-server = "server:main"
